--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
   "dependencies": {
     "expo": "~40.0.0",
     "expo-status-bar": "~1.0.3",
+    "plotly.js": "^1.58.4",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
-    "react-native-web": "~0.13.12"
+    "react-native-plotly": "^4.0.0",
+    "react-native-web": "~0.13.12",
+    "react-plotly.js": "^2.5.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
