--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-40.0.1.tar.gz",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-plotly": "^4.0.0",
-    "react-native-web": "~0.13.12",
-    "react-plotly.js": "^2.5.1"
+    "react-native-svg": "^12.1.0",
+    "react-native-web": "^0.15.0",
+    "react-plotly.js": "^2.5.1",
+    "victory-native": "^35.3.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
